[package]
name = "cntk"
description = "Wrapper around Microsoft CNTK library"
license = "MIT"
version = "0.0.4"
authors = ["Vlado Boza <bozavlado@gmail.com>"]
repository = "https://github.com/usamec/cntk-rs"
documentation = "https://usamec.github.io/cntk-rs/cntk/"
readme = "README.md"
keywords = ["machine-learning", "deep-learning", "neural-networks"]

build = "build.rs"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
cpp = "0.3.2"

[build-dependencies]
cpp_build = "0.3.2"
